bin_PROGRAMS = crappydns

crappydns_SOURCES = cli.cc \
                    crappydns.cc \
                    server.cc \
                    session.cc \
                    hosts/rule.cc \
                    hosts/hosts.cc \
                    session_manager.cc \
                    sender.cc \
                    worker/tcp_worker.cc \
                    worker/udp_worker.cc \
                    trusted_net.cc \
                    utils.cc
